매칭성공시 메일발송 완료.

--- a/guemgo_project/src/main/webapp/resources/css/custom.css
+++ b/guemgo_project/src/main/webapp/resources/css/custom.css
@@ -10,3 +10,38 @@ h5 {
 body {
 	font-family: 'Nanum Gothic';
 }
+
+
+table.type07 {
+	font-family: 'Jeju Gothic';
+    border-collapse: collapse;
+    text-align: left;
+    line-height: 1.5;
+    border: 1px solid #ccc;
+    margin: 20px 10px;
+}
+table.type07 thead {
+    border-right: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    background: #0283f7;
+}
+table.type07 thead th {
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    color: #fff;
+}
+table.type07 tbody th {
+    width: 150px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    background: #c2c2c2;
+}
+table.type07 td {
+    width: 350px;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+}
