--- a/guemgo_project/src/main/webapp/resources/css/custom.css
+++ b/guemgo_project/src/main/webapp/resources/css/custom.css
@@ -45,3 +45,15 @@ table.type07 td {
     vertical-align: top;
     border-bottom: 1px solid #ccc;
 }
+
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
