--- a/guemgo_project/src/main/webapp/resources/boot2/css/landing-page.css
+++ b/guemgo_project/src/main/webapp/resources/boot2/css/landing-page.css
@@ -31,11 +31,11 @@ h6 {
 }
 
 .intro-header {
-    padding-top: 50px; /* If you'renavbar-nav mr-auto making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-top: 250px; /* If you'renavbar-nav mr-auto making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/DlxIdK9U4AAijVi.jpg) no-repeat center center;
+    background: url(../css/Designer.jpg) no-repeat center center;
     background-size: cover;
 }
 
